# CLI-Utilities

./: CMakeLists.txt  README.md
include/: BatteryMonitor.h  Cleaner.h  Colors.h  DeviceWatcher.h  WifiMonitor.h
include/monitors/: BatteryMonitor.h  Cleaner.h  CodeCounter.h  DeviceWatcher.h  SystemInfo.h  WifiMonitor.h
include/utils/: Colors.h  PrintUtilites.h  Structs.h
interface/: Command.h  IBatteryMonitor.h  ICleaner.h  ICodeCounter.h  IDeviceWatcher.h  ISystemInfo.h  IWifiMonitor.h
src/: BatteryMonitor.cpp  Cleaner.cpp  CodeCounter.cpp  DeviceWatcher.cpp  SystemInfo.cpp  WifiMonitor.cpp  battery.cpp  cleaner.cpp  devices.cpp  main.cpp  wifi.cpp
